--- a/drivers/gpu/drm/i915/Kconfig
+++ b/drivers/gpu/drm/i915/Kconfig
@@ -130,6 +130,15 @@ config DRM_I915_GVT_KVMGT
 	  Choose this option if you want to enable KVMGT support for
 	  Intel GVT-g.
 
+config DRM_I915_GVT_SLVMGT
+	tristate "Enable SLVM support for Intel GVT-g"
+	depends on DRM_I915
+	depends on DRM_I915_GVT
+	default n
+	help
+	  Choose this option if you want to enable SLVM support for
+	  Intel GVT-g.
+
 menu "drm/i915 Debugging"
 depends on DRM_I915
 depends on EXPERT
